--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,19 @@ android {
     }
 
     buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+                signingConfig signingConfigs.release
+                debuggable false
+            }
+
+            debug {
+                minifyEnabled false
+                versionNameSuffix "-" + getDate('yyyyMMddHHmmss')
+                signingConfig signingConfigs.debug
+            }
         }
     }
 }
@@ -39,4 +49,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+}
+
+def getDate(format) {
+    def date = new Date()
+    def formattedDate = date.format(format)
+    return formattedDate
 }
